--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Movie Finder 🌟 (Mahesh)</title>
     <link
       rel="shortcut icon"
-      href="./src/Untitled design.png"
+      href="./src/assets/Untitled design.png"
       type="mahesh/png"
     />
   </head>
